Khoi: Fix motto, reason tablet

--- a/Frontend/user/src/pages/Home/HomeMotto/HomeMotto.module.scss
+++ b/Frontend/user/src/pages/Home/HomeMotto/HomeMotto.module.scss
@@ -64,7 +64,7 @@
   .home {
     &__motto {
       margin: auto;
-      margin-top: 100px;
+      margin-top: 10px;
       margin-bottom: 23px;
       display: flex;
       width: 90%;
